# PyRevealed

./: .gitignore  .readthedocs.yaml  Agents.md  CHANGELOG.md  CLAUDE.md  DUNNHUMBY.md  LICENSE  README.md  TENREC_DECISION.md  gen_menu_gifs.py  instacart_diagnostic_summary.md  open_ecommerce_eda_report.md  pyproject.toml  report.md  requirements.txt  taobao_eda_report.md  taobao_salvage_report.md  temp_meta.json  tenrec_eda_summary.md  tenrec_report.md  tenrec_salvage_report.md
applications/: 01_grocery_scanner.py  02_llm_alignment.py  03_recommendation_clicks.py
benchmarks/: __init__.py  bench_1m_menu.py  bench_1m_users.py  bench_parquet_1m.py  config.py  e2e_rust_vs_python.py  generate_scaling_plots.py  generators.py  memory_optimized_bench.py  multi_user_bench.py  overhead_analysis.py  r_validation.py  run_scaling.py  rust_vs_python.py  rust_vs_python_all_metrics.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
docs/: algorithms.rst  api.rst  app_grocery.rst  app_llm_alignment.rst  app_recsys.rst  applications.rst  benchmarks.rst  benchmarks_ecommerce.rst  benchmarks_ecommerce.rst.bak  case_study.rst  conf.py  ecommerce_benchmarking.md  examples.rst  generate_doc_gifs.py  generate_front_page_plots.py  implementation_status.md  (+27 more)
rust/crates/rpt-core/: Cargo.toml
rust/crates/rpt-core/src/: attention.rs  ccei.rs  closure.rs  expenditure.rs  garp.rs  graph.rs  harp.rs  houtman_maks.rs  intertemporal.rs  lib.rs  lp.rs  menu.rs  mpi.rs  quasilinear.rs  scc.rs  separability.rs  stochastic.rs  types.rs  utility.rs  variants.rs  vei.rs
(+517 files in other folders)
