[package]
name = "rpt-core"
version = "0.1.0"
edition = "2021"
description = "Revealed Preference Theory algorithms - pure Rust, no Python dependency"

[features]
default = []
gurobi = ["grb"]

[dependencies]
highs = "1"  # HiGHS LP/MILP solver (MIT license)
rand = "0.8"  # Random permutations for RUM column generation
grb = { version = "3", optional = true }  # Gurobi (requires license + shared lib)
